--- a/src/main/resources/fxml/humanWitnessMemory.fxml
+++ b/src/main/resources/fxml/humanWitnessMemory.fxml
@@ -6,13 +6,14 @@
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
 <StackPane onKeyPressed="#sendMessage" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.se206.controllers.HumanWitnessMemoryController">
@@ -24,7 +25,6 @@
             <Image url="@../images/musicStudioBackground.jpg" />
           </image>
         </ImageView>
-            <Label layoutX="387.0" layoutY="195.0" prefHeight="138.0" prefWidth="633.0" style="-fx-background-color: black;" />
             <ImageView fitHeight="171.0" fitWidth="378.0" layoutX="-3.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../images/titleBackground.png" />
@@ -46,15 +46,12 @@
                </image>
             </ImageView>
         <TextArea fx:id="txtaChat" editable="false" layoutX="13.0" layoutY="270.0" opacity="0.83" prefHeight="463.0" prefWidth="356.0" style="-fx-control-inner-background: black; -fx-text-fill: #39FF14;" wrapText="true" />
-            <ImageView fitHeight="294.0" fitWidth="418.0" layoutX="733.0" layoutY="483.0" pickOnBounds="true" preserveRatio="true" scaleX="1.1" scaleY="1.1" scaleZ="1.1">
+            <ImageView fitHeight="294.0" fitWidth="418.0" layoutX="799.0" layoutY="535.0" pickOnBounds="true" preserveRatio="true" scaleX="0.75" scaleY="0.75" scaleZ="0.75">
                <image>
                   <Image url="@../images/aICasetteTape.png" />
                </image>
             </ImageView>
-            <Label fx:id="robotTextDisplay" alignment="CENTER" layoutX="850.0" layoutY="519.0" prefHeight="66.0" prefWidth="166.0" style="-fx-background-color: white;" text="     Choose Song to&#10;⬇Insert beats below⬇" textFill="RED">
-               <font>
-                  <Font size="16.0" />
-               </font></Label>
+            <Label fx:id="robotTextDisplay" alignment="CENTER" layoutX="935.0" layoutY="603.0" prefHeight="52.0" prefWidth="126.0" style="-fx-background-color: white;" text="     Choose Song to&#10;⬇Insert beats below⬇" textFill="RED" />
         <TextField fx:id="txtInput" layoutX="12.0" layoutY="741.0" opacity="0.83" prefHeight="35.0" prefWidth="356.0" style="-fx-control-inner-background: black; -fx-text-fill: #39FF14;" />
         <Button fx:id="btnSend" layoutX="373.0" layoutY="743.0" mnemonicParsing="false" onAction="#onSendMessage" prefHeight="30.0" prefWidth="51.0" text="Send">
                <font>
@@ -74,54 +71,7 @@
             <Font size="30.0" />
           </font>
         </Label>
-            <Button fx:id="playNextSongButton" layoutX="860.0" layoutY="276.0" mnemonicParsing="false" onAction="#onGoToNextSong" onMouseEntered="#onlightUpNextButton" onMouseExited="#onlightDownNextButton" opacity="0.7" prefHeight="33.0" prefWidth="34.0" style="-fx-background-radius: 17;">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <Button fx:id="playPreviousSongButton" layoutX="716.0" layoutY="277.0" mnemonicParsing="false" onAction="#onGoToPreviousSong" onMouseEntered="#onlightUpPreviousButton" onMouseExited="#onlightDownPreviousButton" opacity="0.7" prefHeight="33.0" prefWidth="34.0" style="-fx-background-radius: 17;">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <Button fx:id="playButton" layoutX="781.0" layoutY="268.0" mnemonicParsing="false" onAction="#onTurnOnCassetteTape" prefHeight="46.0" prefWidth="46.0" style="-fx-background-color: white; -fx-background-radius: 200;">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </Button>
-            <Label fx:id="songLabel" alignment="CENTER" layoutX="534.0" layoutY="200.0" prefHeight="46.0" prefWidth="472.0" style="-fx-background-color: black; -fx-background-radius: 10;" textFill="WHITE">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
-            <ImageView disable="true" fitHeight="82.0" fitWidth="84.0" layoutX="765.0" layoutY="253.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/musicbuttonPlay.png" />
-               </image>
-            </ImageView>
-            <ImageView disable="true" fitHeight="67.0" fitWidth="69.0" layoutX="699.0" layoutY="261.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/musicbuttonPrevious.png" />
-               </image>
-            </ImageView>
-            <ImageView disable="true" fitHeight="67.0" fitWidth="69.0" layoutX="844.0" layoutY="259.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
-               <image>
-                  <Image url="@../images/musicbuttonPrevious.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="musicCover" fitHeight="126.0" fitWidth="127.0" layoutX="398.0" layoutY="202.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/carRadio.jpg" />
-               </image>
-               <effect>
-                  <InnerShadow blurType="GAUSSIAN" choke="1.0" height="4.0" radius="1.25" width="3.0">
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </InnerShadow>
-               </effect>
-            </ImageView>
-        <ImageView fx:id="cassetteTape" disable="true" fitHeight="126.0" fitWidth="270.0" layoutX="587.0" layoutY="343.0" preserveRatio="true" scaleX="1.13" scaleY="1.13" scaleZ="1.13">
+        <ImageView fx:id="cassetteTape" disable="true" fitHeight="126.0" fitWidth="270.0" layoutX="404.0" layoutY="556.0" preserveRatio="true" scaleX="0.75" scaleY="0.75" scaleZ="0.75">
           <image>
             <Image url="@../images/cassetteTape.png" />
           </image>
@@ -129,16 +79,30 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
         </ImageView>
-            <ImageView fx:id="rotatingCassetteTape" fitHeight="20.0" fitWidth="24.0" layoutX="894.0" layoutY="650.0" pickOnBounds="true" preserveRatio="true" scaleX="1.1" scaleY="1.1" scaleZ="1.1">
+            <ImageView fx:id="rotatingCassetteTape" fitHeight="20.0" fitWidth="24.0" layoutX="966.0" layoutY="691.0" pickOnBounds="true" preserveRatio="true" scaleX="0.75" scaleY="0.75" scaleZ="0.75">
                <image>
                   <Image url="@../images/cassetteSpinning.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="rotatingCassetteTape1" fitHeight="22.0" fitWidth="22.0" layoutX="966.0" layoutY="649.0" pickOnBounds="true" preserveRatio="true" scaleX="1.1" scaleY="1.1" scaleZ="1.1">
+            <ImageView fx:id="rotatingCassetteTape1" fitHeight="22.0" fitWidth="22.0" layoutX="1014.0" layoutY="690.0" pickOnBounds="true" preserveRatio="true" scaleX="0.75" scaleY="0.75" scaleZ="0.75">
                <image>
                   <Image url="@../images/cassetteSpinning.png" />
                </image>
             </ImageView>
+            <GridPane fx:id="beatGrid" gridLinesVisible="true" layoutX="444.0" layoutY="306.0" prefHeight="138.0" prefWidth="412.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="133.60003662109375" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="133.60003662109375" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="133.60003662109375" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="133.60003662109375" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
       </children>
     </AnchorPane>
     
