--- a/src/main/resources/fxml/humanWitnessMemory.fxml
+++ b/src/main/resources/fxml/humanWitnessMemory.fxml
@@ -51,7 +51,10 @@
                   <Image url="@../images/aICasetteTape.png" />
                </image>
             </ImageView>
-            <Label fx:id="robotTextDisplay" alignment="CENTER" layoutX="935.0" layoutY="603.0" prefHeight="52.0" prefWidth="126.0" style="-fx-background-color: white;" text="     Choose Song to&#10;⬇Insert beats below⬇" textFill="RED" />
+            <Label fx:id="robotTextDisplay" alignment="CENTER" layoutX="939.0" layoutY="603.0" prefHeight="52.0" prefWidth="117.0" style="-fx-background-color: white;" text="Complete the &#10;pattern first!&#10;" textFill="RED">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
         <TextField fx:id="txtInput" layoutX="12.0" layoutY="741.0" opacity="0.83" prefHeight="35.0" prefWidth="356.0" style="-fx-control-inner-background: black; -fx-text-fill: #39FF14;" />
         <Button fx:id="btnSend" layoutX="373.0" layoutY="743.0" mnemonicParsing="false" onAction="#onSendMessage" prefHeight="30.0" prefWidth="51.0" text="Send">
                <font>
@@ -103,6 +106,11 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
             </GridPane>
+            <Label fx:id="instructionLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="399.0" layoutY="212.0" prefHeight="66.0" prefWidth="681.0" style="-fx-background-color: black;" text="QUICK! SELECT THE RIGHT SONG PATTERN" textFill="WHITE">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
       </children>
     </AnchorPane>
     
