--- a/src/main/resources/fxml/humanWitnessMemory.fxml
+++ b/src/main/resources/fxml/humanWitnessMemory.fxml
@@ -22,7 +22,7 @@
 
 <StackPane onKeyPressed="#sendMessage" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nz.ac.auckland.se206.controllers.HumanWitnessMemoryController">
   <children>
-    <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="789.0" prefWidth="1100.0">
+    <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#onFirstMouseClick" prefHeight="789.0" prefWidth="1100.0">
       <children>
         <ImageView fitHeight="835.0" fitWidth="1151.0" layoutX="-5.0" layoutY="1.0" opacity="0.9" preserveRatio="true">
           <image>
@@ -49,14 +49,7 @@
                   <Image url="@../images/titleBackground.png" />
                </image>
             </ImageView>
-        <TextArea fx:id="txtaChat" editable="false" layoutX="13.0" layoutY="270.0" opacity="0.83" prefHeight="463.0" prefWidth="356.0" style="-fx-control-inner-background: black; -fx-text-fill: #39FF14;" wrapText="true">
-               <effect>
-                  <DropShadow>
-                     <color>
-                        <Color red="1.0" green="1.0" blue="1.0" />
-                     </color>
-                  </DropShadow>
-               </effect></TextArea>
+        <TextArea fx:id="txtaChat" editable="false" layoutX="13.0" layoutY="270.0" opacity="0.83" prefHeight="463.0" prefWidth="356.0" style="-fx-control-inner-background: black; -fx-text-fill: #39FF14;" wrapText="true" />
             <ImageView fitHeight="294.0" fitWidth="418.0" layoutX="799.0" layoutY="535.0" pickOnBounds="true" preserveRatio="true" scaleX="0.75" scaleY="0.75" scaleZ="0.75">
                <image>
                   <Image url="@../images/aICasetteTape.png" />
@@ -99,7 +92,7 @@
             <Font size="30.0" />
           </font>
         </Label>
-        <ImageView fx:id="cassetteTape" disable="true" fitHeight="126.0" fitWidth="270.0" layoutX="404.0" layoutY="556.0" preserveRatio="true" scaleX="0.75" scaleY="0.75" scaleZ="0.75">
+        <ImageView fx:id="cassetteTape" disable="true" fitHeight="126.0" fitWidth="270.0" layoutX="415.0" layoutY="614.0" onDragDetected="#onCassetteClick" preserveRatio="true" scaleX="0.75" scaleY="0.75" scaleZ="0.75">
           <image>
             <Image url="@../images/cassetteTape.png" />
           </image>
@@ -146,6 +139,9 @@
                <font>
                   <Font size="28.0" />
                </font>
+               <effect>
+                  <DropShadow />
+               </effect>
             </Label>
             <Label fx:id="instructionLabel1" alignment="CENTER" contentDisplay="CENTER" layoutX="914.0" layoutY="270.0" prefHeight="30.0" prefWidth="166.0" style="-fx-background-color: black;" text="HINT: Colour the border" textFill="RED">
                <font>
@@ -210,6 +206,42 @@
                   </ImageView>
                </graphic>
             </ToggleButton>
+            <ImageView fx:id="arrowHint1" disable="true" fitHeight="137.0" fitWidth="106.0" layoutX="528.0" layoutY="544.0" pickOnBounds="true" preserveRatio="true" rotate="-45.0">
+               <image>
+                  <Image url="@../images/arrow.png" />
+               </image>
+               <effect>
+                  <DropShadow>
+                     <color>
+                        <Color red="1.0" />
+                     </color>
+                  </DropShadow>
+               </effect>
+            </ImageView>
+            <ImageView fx:id="arrowHint2" disable="true" fitHeight="108.0" fitWidth="116.0" layoutX="817.0" layoutY="520.0" pickOnBounds="true" preserveRatio="true" rotate="75.0">
+               <image>
+                  <Image url="@../images/arrow.png" />
+               </image>
+               <effect>
+                  <DropShadow>
+                     <color>
+                        <Color red="1.0" />
+                     </color>
+                  </DropShadow>
+               </effect>
+            </ImageView>
+            <ImageView fx:id="arrowHint3" disable="true" fitHeight="108.0" fitWidth="116.0" layoutX="607.0" layoutY="545.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+               <image>
+                  <Image url="@../images/arrow.png" />
+               </image>
+               <effect>
+                  <DropShadow>
+                     <color>
+                        <Color red="1.0" />
+                     </color>
+                  </DropShadow>
+               </effect>
+            </ImageView>
       </children>
     </AnchorPane>
     
