--- a/src/main/resources/css/humanWitnessStyle.css
+++ b/src/main/resources/css/humanWitnessStyle.css
@@ -22,3 +22,8 @@
   -fx-background-color: rgba(227, 255, 255, 0.5);
   background-color: rgba(245, 255, 255, 0.792);
 }
+
+.label {
+  -fx-font-family: "Futura";
+  -fx-font-weight: bold;
+}
