--- a/src/main/resources/fxml/humanWitnessMemory.fxml
+++ b/src/main/resources/fxml/humanWitnessMemory.fxml
@@ -62,7 +62,7 @@
                   </DropShadow>
                </effect>
             </ImageView>
-            <Label fx:id="robotTextDisplay" alignment="CENTER" layoutX="939.0" layoutY="603.0" prefHeight="52.0" prefWidth="117.0" style="-fx-background-color: white;" text="Complete the &#10;pattern first!&#10;" textFill="RED">
+            <Label fx:id="robotTextDisplay" alignment="CENTER" layoutX="939.0" layoutY="603.0" prefHeight="52.0" prefWidth="117.0" style="-fx-background-color: white;" stylesheets="@../css/humanWitnessStyle.css" text="Complete the &#10;pattern first!&#10;" textFill="RED">
                <font>
                   <Font size="14.0" />
                </font></Label>
@@ -85,12 +85,12 @@
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
-          <Label fx:id="timer" layoutX="941.0" layoutY="41.0" prefHeight="63.0" prefWidth="155.0" text="5:00" textFill="WHITE">
+          <Label fx:id="timer" layoutX="941.0" layoutY="41.0" prefHeight="63.0" prefWidth="155.0" stylesheets="@../css/humanWitnessStyle.css" text="5:00" textFill="WHITE">
             <font>
               <Font size="50.0" />
             </font></Label>
         <ProgressBar fx:id="progressBar" layoutY="158.0" prefHeight="26.0" prefWidth="1100.0" progress="0.0" />
-        <Label alignment="CENTER" layoutX="328.0" layoutY="42.0" prefHeight="66.0" prefWidth="485.0" style="-fx-background-color: #000;" text="Human Witness Memory" textFill="WHITE">
+        <Label alignment="CENTER" layoutX="328.0" layoutY="42.0" prefHeight="66.0" prefWidth="485.0" style="-fx-background-color: #000;" stylesheets="@../css/humanWitnessStyle.css" text="Human Witness Memory" textFill="WHITE">
           <font>
             <Font size="30.0" />
           </font>
@@ -138,7 +138,7 @@
                </cursor>
             </GridPane>
             <Rectangle fx:id="movingBar" arcHeight="5.0" arcWidth="5.0" fill="#00ffba" height="152.0" layoutX="812.0" layoutY="342.0" opacity="0.7" stroke="#00ffba" strokeType="INSIDE" strokeWidth="3.0" width="2.0" />
-            <Label fx:id="instructionLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="399.0" layoutY="212.0" prefHeight="66.0" prefWidth="681.0" style="-fx-background-color: black;" text="COPY THE PATTERN TO MAKE A SONG " textFill="WHITE">
+            <Label fx:id="instructionLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="399.0" layoutY="212.0" prefHeight="66.0" prefWidth="681.0" style="-fx-background-color: black;" stylesheets="@../css/humanWitnessStyle.css" text="COPY THE PATTERN TO MAKE A SONG " textFill="WHITE">
                <font>
                   <Font size="28.0" />
                </font>
