--- a/src/main/resources/fxml/finalPage.fxml
+++ b/src/main/resources/fxml/finalPage.fxml
@@ -31,17 +31,17 @@
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Button>
-        <Label fx:id="titleLabel1" alignment="CENTER" layoutX="19.0" layoutY="73.0" prefHeight="66.0" prefWidth="1061.0" text="Was the AI defendant Ethical or Not?">
+        <Label fx:id="titleLabel1" alignment="CENTER" layoutX="13.0" layoutY="57.0" prefHeight="66.0" prefWidth="1061.0" text="Was the AI defendant ethical or not?">
           <font>
             <Font size="44.0" />
           </font>
         </Label>
-        <Label fx:id="timer" alignment="CENTER" layoutX="432.0" layoutY="184.0" prefHeight="95.0" prefWidth="230.0" stylesheets="@../css/finalPageStyle.css" text="1:00">
+        <Label fx:id="timer" alignment="CENTER" layoutX="426.0" layoutY="167.0" prefHeight="95.0" prefWidth="230.0" stylesheets="@../css/finalPageStyle.css" text="1:00">
           <font>
             <Font size="44.0" />
           </font>
         </Label>
-        <Label fx:id="titleLabel2" alignment="CENTER" layoutX="22.0" layoutY="128.0" prefHeight="66.0" prefWidth="1065.0" stylesheets="@../css/finalPageStyle.css" text="you have 60 seconds to decide">
+        <Label fx:id="titleLabel2" alignment="CENTER" layoutX="16.0" layoutY="112.0" prefHeight="66.0" prefWidth="1065.0" stylesheets="@../css/finalPageStyle.css" text="You have 60 seconds to decide">
           <font>
             <Font size="44.0" />
           </font>
